# project

./: .env  Cargo.toml
src/: home.rs  main.rs  page.rs  tabela_produto.rs
temp.db/: 000040.sst  000045.sst  IDENTITY  LOG  LOG.old.1667868647894075  LOG.old.1667868687771301  LOG.old.1667868722460600  LOG.old.1667868778730602  LOG.old.1667869747388058  LOG.old.1667869852232381  LOG.old.1667869901508892  LOG.old.1667869977394328  LOG.old.1667869999274890  LOG.old.1667870019502669  LOG.old.1667870115219753  LOG.old.1667870392007884  LOG.old.1667870422127770  LOG.old.1667870505604588  LOG.old.1667870612341401  LOG.old.1667870861405292  MANIFEST-000071
templates/: actix.stpl  head.stpl  home.stpl  page.stpl
