[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
log = "0.4"
sailfish = "0.5"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1.0.87"
actix-web ="^4"
actix-web-lab = "0.18.5"
sqlx = { version = "0.6.2", features = ["runtime-async-std-native-tls", "postgres"] }
dotenv = "0.15.0"
